objects/wkcc__SurveyScheduleRecipient__c.object
<CustomObject>
    <fields>
        <fullName>wkcc__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employee</referenceTo>
        <relationshipLabel>Survey Schedule Recipients</relationshipLabel>
        <relationshipName>SurveyScheduleRecipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkcc__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Survey Schedule Recipients</relationshipLabel>
        <relationshipName>SurveyScheduleRecipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkcc__SurveySchedule__c</fullName>
        <label>Survey Schedule</label>
        <referenceTo>wkcc__SurveySchedule__c</referenceTo>
        <relationshipLabel>Survey Schedule Recipients</relationshipLabel>
        <relationshipName>SurveyScheduleRecipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Survey Schedule Recipient</label>
    <nameField>
        <displayFormat>SSR-{00000000}</displayFormat>
        <label>Survey Schedule Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Schedule Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>wkcc__RecipientsBasedOnRecipientType</fullName>
        <active>true</active>
        <errorConditionFormula>IF (ISPICKVAL(wkcc__SurveySchedule__r.wkcc__RecipientType__c,&apos;Employee&apos;), NOT(ISBLANK(wkcc__Location__c)), NOT(ISBLANK(wkcc__Employee__c)))</errorConditionFormula>
        <errorMessage>Schedule Recipient needs to be selected based on Schedule Recipient Type</errorMessage>
    </validationRules>
</CustomObject>